# qt-log-searcher

./: CMakeLists.txt  CMakeLists.txt.user.3ad4da0  LogController.cpp  LogController.h  LogData.h  LogModel.cpp  LogModel.h  README.md  logs.txt  main.cpp  main.qml  qml.qrc
